Creating a doctor controller
